crates/shaken/snapshots/shaken__modules__builtin__tests__bot_uptime@bot_uptime.snap
---
source: crates/shaken/src/modules/builtin.rs
expression: mock.get_response()
---
kind:
  - Say: "I've been running for: 3 hours, 25 minutes and 45 seconds"

