crates/shaken/snapshots/shaken__modules__builtin__tests__help@help-2.snap
---
source: crates/shaken/src/modules/builtin.rs
expression: mock.get_response()
---
kind:
  - Say: "usage: !help <cmd?>"
  - Say: "description: list all commands, or looks up a specific command"

