crates/shaken/snapshots/shaken__modules__builtin__tests__help@help-3.snap
---
source: crates/shaken/src/modules/builtin.rs
expression: mock.get_response()
---
kind:
  - Problem: "I couldn't find !foo"

