crates/shaken/snapshots/shaken__modules__builtin__tests__list_commands@list_commands.snap
---
source: crates/shaken/src/modules/builtin.rs
expression: mock.get_response()
---
kind:
  - Say: "!hello !time !theme !bot-uptime !uptime !help !commands"

