crates/shaken/snapshots/shaken__modules__builtin__tests__say_hello@say_hello.snap
---
source: crates/shaken/src/modules/builtin.rs
expression: mock.get_response()
---
kind:
  - Say: "hello, #test_user."

