crates/shaken/snapshots/shaken__modules__builtin__tests__theme@theme.snap
---
source: crates/shaken/src/modules/builtin.rs
expression: mock.get_response()
---
kind:
  - Say: "'Monokai GrayJack' from https://marketplace.visualstudio.com/items?itemName=grayjack.monokai-grayjack"

