crates/shaken/snapshots/shaken__modules__builtin__tests__time@time.snap
---
source: crates/shaken/src/modules/builtin.rs
expression: mock.get_response()
---
kind:
  - Say: "current time: [time]"

