crates/shaken/snapshots/shaken__modules__builtin__tests__uptime@uptime.snap
---
source: crates/shaken/src/modules/builtin.rs
expression: mock.get_response()
---
kind:
  - Say: "stream has been running for: 3 hours, 25 minutes and 45 seconds"

